feat: initial route configs declaration
