# apps/backend/src/controller/routes.ts
@@ -11,9 +11,18 @@ export const routes = [
         method: "post" as const,
         route: "/user/:id/cycle-config",
         handler: editUserConfigHandler
+    },
+    {
+        method: 'post' as const,
+        route: 'user/:id/cycle/start',
+        handler: () => {}
+    },
+    {
+        method: 'post' as const,
+        route: 'user/:id/cycle/:cycle_id/events',
+        handler: () => {}
     }
 ]
-
 
 async function getUserConfigHandler(ctx: Context, next: any) {
     const body = ctx.request.body;
@@ -21,7 +30,6 @@ async function getUserConfigHandler(ctx: Context, next: any) {
     ctx.body = {result: "get user config was successfull"}
     await next();
 }
-
 
 async function editUserConfigHandler(ctx: Context, next: any) {
     const body = ctx.request.body;
